--- a/BTL Web/css/bander.css
+++ b/BTL Web/css/bander.css
@@ -105,6 +105,7 @@ header.sticky img{
 }
 
 #searchPopup {
+    background-color: white;
     margin-left: -200px;
     height: 90px;
     display: none;
